Finished Hero section. Started flexbox section with four columns and added images.

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
-
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+  
 .header {
     overflow: hidden;
     background-color: #1F2937;
-    padding: 20px 125px;
+    padding: 20px 5px;
   }
   
 /* Style the header links */
@@ -33,7 +38,7 @@ color: black;
 /* Style the active/current link*/
 .header a.active {
 /* background-color: dodgerblue; */
-background-color: #00b4d8;
+background-color: #3882F6;
 color: #E5E7EB;
 }
 
@@ -42,28 +47,41 @@ color: #E5E7EB;
 float: right;
 }
 
-.Hero {
+.row {
     background-color: #1F2937;
     padding-top: 90px;
+    display: flex;
 }
 
-.Hero h1 {
+.row h1 {
     font-size: 48px;
     font-style: extra-bold;
     color: #F9FAF8;
 }
 
-.Hero h3 {
+.row h3 {
     font-size: 18px;
     color: #E5E7EB;
 }
 
 .Hero-sign-up-btn {
     background-color: #3882F6;
-    color: white;
+    color: #E5E7EB;
     padding: 5px 20px;
     border-radius: 6px;
 
+}
+.random-info {
+    display: flex;
+}
+
+.column {
+    flex: 50%;
+    padding: 20px;
+  }
+
+.column1 {
+    flex: 50%;
 }
 footer {
     background-color: #1F2937;
