--- a/styles.css
+++ b/styles.css
@@ -80,8 +80,9 @@ float: right;
 
 .column {
     flex: 50%;
-    padding: 20px;
+    padding-bottom: 30px;
   }
+
 
 .column1 {
     flex: 50;
@@ -107,7 +108,7 @@ float: right;
 
 .quote {
     background-color: #E5E7EB;
-    padding: 150px;
+    padding: 130px;
 }
 
 .burger-quote {
@@ -120,7 +121,39 @@ float: right;
     font-style: italic;
 }
 
-  footer {
+.call-to-action {
+    padding: 100px;
+}
+
+.blue-box {
+    background-color: #3882F6;
+    padding: 30px;
+    border-radius: 6px;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.blue-box-quote {
+    color: #F9FAF8;
+    padding: 10px;
+    padding-left: 70px;
+}
+
+.call-to-action-quote h3 {
+    font-style: bold;
+    font-size: 20px;
+}
+
+.sign-up-btn{
+    background-color: #3882F6;
+    color: #E5E7EB;
+    padding: 5px 20px;
+    border-radius: 6px;
+    border: 2px solid white;
+}
+
+footer {
     background-color: #1F2937;
     color: white;
     padding: 20px;
