--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,7 @@ float: right;
 
 .column1 {
     flex: 50;
+    justify-content: center;
 }
 
 .column1 img,
@@ -132,6 +133,7 @@ float: right;
     width: 75%;
     margin-left: auto;
     margin-right: auto;
+    display: flex;
 }
 
 .blue-box-quote {
@@ -148,10 +150,17 @@ float: right;
 .sign-up-btn{
     background-color: #3882F6;
     color: #E5E7EB;
-    padding: 5px 20px;
+    padding: 6px 20px;
     border-radius: 6px;
     border: 2px solid white;
+
 }
+  
+.btn-box {
+    padding-left: 200px;
+    padding-top: 20px;
+}
+
 
 footer {
     background-color: #1F2937;
